--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bookshelf": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.2",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5"
