--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/index.js --watch src",
+    "start": "nodemon ./src/index.js --watch src --watch .env",
     "migrate": "knex migrate:latest --knexfile src/knexfile.js",
     "knex": "knex --knexfile src/knexfile.js"
   },
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bookshelf": "^1.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
